licenses(["notice"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "dbconfig.go",
        "graph.go",
    ],
    importpath = "github.com/mingkaic/ultrasound/data",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
