licenses(["notice"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/mingkaic/ultrasound/emitter/api",
    deps = [
        "//data:go_default_library",
        "//emitter/proto:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
