# gazelle:ignore
licenses(["notice"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

go_proto_library(
    name = "emitter_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mingkaic/ultrasound/emitter/proto",
    proto = "@com_github_mingkaic_tenncor//dbg:tenncor_proto",
)

go_library(
    name = "go_default_library",
    srcs = ["emitter.go"],
    embed = [":emitter_go_proto"],
    importpath = "github.com/mingkaic/ultrasound/emitter/proto",
)
