load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["serve.go"],
    importpath = "github.com/mingkaic/ultrasound/server/core",
    visibility = ["//visibility:public"],
    deps = [
        "//emitter/api:go_default_library",
        "//emitter/proto:go_default_library",
        "//viewer/api:go_default_library",
        "//viewer/proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
