load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

licenses(["notice"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@com_github_stackb_rules_proto//go:go_grpc_library.bzl", "go_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "viewer_proto",
    srcs = ["viewer.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "viewer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mingkaic/ultrasound/viewer/proto",
    proto = ":proto_proto",
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "go_default_library",
    srcs = ["viewer.go"],
    embed = [":viewer_go_proto"],
    importpath = "github.com/mingkaic/ultrasound/viewer/proto",
)

proto_library(
    name = "proto_proto",
    srcs = ["viewer.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)
